--- a/static/common.css
+++ b/static/common.css
@@ -37,5 +37,5 @@ a {
 }
 body::after{
 	position:absolute; width:0; height:0; overflow:hidden; z-index:-1;
-	content:url(static/arrow.png) url(static/avatar-border.png) url(static/character-large.png) url(static/character-small.png) url(static/preserved-large.png) url(static/preserved-small.png) url(static/sticker.png);
+	content:url(arrow.png) url(avatar-border.png) url(character-large.png) url(character-small.png) url(preserved-large.png) url(preserved-small.png) url(sticker.png);
 }
